--- a/deployment/kubernetes/test_workloads/job.yaml
+++ b/deployment/kubernetes/test_workloads/job.yaml
@@ -14,5 +14,5 @@ spec:
         command:
          - "bin/bash"
          - "-c"
-         - "for i in 9 8 7 6 5 4 3 2 1 ; do echo $i ; done"
+         - "while true ; do sleep 5 && echo running ; done"
       restartPolicy: Never
