--- a/deployment/kubernetes/test_connections/pod-localhost.yaml
+++ b/deployment/kubernetes/test_connections/pod-localhost.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: pod-localhost
+  labels:
+    test: pod-localhost
 spec:
   containers:
     - image: jgkamat/netcat
