--- a/deployment/kubernetes/test_connections/pod-to-service-cluster-ip.yaml
+++ b/deployment/kubernetes/test_connections/pod-to-service-cluster-ip.yaml
@@ -4,6 +4,7 @@ metadata:
   name: pod-server
   labels:
     type: server
+    test: pod-to-service-cluster-ip
 spec:
   containers:
     - image: itsthenetwork/alpine-ncat
@@ -21,6 +22,7 @@ metadata:
   name: pod-service
   labels:
     type: service
+    test: pod-to-service-cluster-ip
 spec:
   type: ClusterIP
   ports:
@@ -34,6 +36,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: pod-client
+  labels:
+    test: pod-to-service-cluster-ip
 spec:
   containers:
     - image: jgkamat/netcat
