--- a/test/molecule-role/molecule/vms/prepare.yml
+++ b/test/molecule-role/molecule/vms/prepare.yml
@@ -259,8 +259,29 @@
     - name: Install stackstate-agent
       win_shell: ". { iwr -useb {{ agent_repo_url }}/install.ps1 } | iex; install -stsApiKey API_KEY -stsUrl https://test-stackstate-agent.sts/stsAgent -hostname {{ inventory_hostname }} -codeName {{ agent_current_branch }} -skipSSLValidation true"
       register: install_result
-
 # - debug: var="install_result"
+
+- name: Prepare Win Agent for Short-Lived tests (post installation configuration)
+  hosts: agent_win_vm
+  gather_facts: false
+  vars_files:
+    - common_vars.yml
+  tasks:
+    - name: "Set process_config.filters.short_lived_processes and process_config.filters.short_lived_network_relations to get deterministic behaviour in the short-lived filtering tests"
+      win_lineinfile:
+        path: C:\ProgramData\StackState\stackstate.yaml
+        insertafter: "process_config:"
+        line: |2
+            filters:
+              short_lived_processes:
+                enabled: true
+                qualifier_secs: {{ process_filter_short_lived_qualifier_secs }}
+              short_lived_network_relations:
+                enabled: true
+                qualifier_secs: {{ network_relation_filter_short_lived_qualifier_secs }}
+    - name: "Restart StackState Agent Service"
+      win_command: |
+       "C:\\Program Files\\StackState\\StackState Agent\\embedded\\agent.exe" restart-service
 
 - name: Prepare Linux Agents (post)
   hosts: agent_linux_vm
@@ -325,8 +346,8 @@
       become: true
       async: "{{ max_test_time }}"
       poll: 0
-    - name: Open listening port for windows interval {{ connection_port_after_start_windows_interval }}
-      shell: "ncat --listen --broker -p {{ connection_port_after_start_windows_interval }}"
+    - name: Open listening port for fedora non-broker {{ connection_port_after_start_fedora_non_broker }}
+      shell: "ncat --listen -p {{ connection_port_after_start_fedora_non_broker }}"
       become: true
       async: "{{ max_test_time }}"
       poll: 0
@@ -358,6 +379,10 @@
         seconds: 10
     - name: Connect to Ubuntu agent P2P
       shell: yes | ncat {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} {{ connection_port_after_start_fedora }}
+      async: "{{ max_test_time }}"
+      poll: 0
+    - name: Connect to Ubuntu agent P2P - non broker
+      shell: yes | ncat {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} {{ connection_port_after_start_fedora_non_broker }}
       async: "{{ max_test_time }}"
       poll: 0
     - name: Connect to Ubuntu agent DNAT
@@ -396,26 +421,24 @@
       win_file:
         path: C:\Temp
         state: directory
-    - name: Write file for interval request
+    - name: Write file for stable request
       win_copy:
         content: |
           :loop
-          nc {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} {{ connection_port_after_start_fedora }} | nc {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} {{ connection_port_after_start_windows_interval }} -w 5
+          nc {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} {{ connection_port_after_start_fedora }} | nc {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} {{ connection_port_after_start_windows }}
           goto loop
-        dest: C:\Temp\request.bat
-    - name: Start nc request loop to hit ubuntu every 5 secs
-      win_command: C:\Temp\request.bat
-      async: "{{ max_test_time }}"
-      poll: 0
-    - name: Connect to Ubuntu agent P2P (1/1) -- Piggyback on fedora ncat broker and pipe data to windows
-      win_command: nc {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} {{ connection_port_after_start_fedora }} | nc {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} {{ connection_port_after_start_windows }}
+        dest: C:\Temp\stable_request.bat
+    - name: Start stable request loop to hit ubuntu P2P (1/2) -- Piggyback on fedora ncat broker and pipe data to windows
+      win_command: C:\Temp\stable_request.bat
       async: "{{ max_test_time }}"
       ignore_errors: True
       register: ubuntu_connect_result
       poll: 0
-    - name: Connect to Ubuntu agent P2P (1/2) -- Piggyback on fedora ncat broker and pipe data to windows
-      win_command: nc {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} {{ connection_port_after_start_fedora }} | nc {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} {{ connection_port_after_start_windows }}
+    - name: Start stable request loop to hit ubuntu P2P (2/2) -- Piggyback on fedora ncat broker and pipe data to windows
+      win_command: C:\Temp\stable_request.bat
       async: "{{ max_test_time }}"
+      ignore_errors: True
+      register: ubuntu_connect_result
       poll: 0
       when: ubuntu_connect_result is failed
 
