--- a/test/molecule-role/molecule/vms/prepare.yml
+++ b/test/molecule-role/molecule/vms/prepare.yml
@@ -49,11 +49,17 @@
         content: |
           STACKSTATE_BRANCH={{ stackstate_branch }}
         dest: /home/ubuntu/.env
-    - name: Run Docker compose
+    - name: Run Docker compose (1/2)
       command: docker-compose up -d
       args:
         chdir: /home/ubuntu/
-
+      ignore_errors: True
+      register: docker_compose_result
+    - name: Run Docker compose (2/2)
+      command: docker-compose up -d
+      args:
+        chdir: /home/ubuntu/
+      when: docker_compose_result is failed
     - import_tasks: ../wait-for-receiver.yml
 
 - name: Prepare Linux Agents (pre)
@@ -238,8 +244,6 @@
 - name: Prepare Win Agent for Short-Lived tests (post installation configuration)
   hosts: agent_win_vm
   gather_facts: false
-  vars_files:
-    - common_vars.yml
   tasks:
     - name: "Set process_config.filters.short_lived_processes and process_config.filters.short_lived_network_relations to get deterministic behaviour in the short-lived filtering tests"
       win_lineinfile:
@@ -363,15 +367,6 @@
       delay: 10
       register: wait_result
       until: wait_result is succeeded
-    - name: "Wait for {{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }} port {{ connection_port_after_start_fedora }}  to become open on the host, don't start checking for 10 seconds"
-      win_wait_for:
-        host: "{{ hostvars['agent-ubuntu']['ansible_default_ipv4']['address'] }}"
-        port: "{{ connection_port_after_start_fedora }}"
-        delay: 10
-      retries: 10
-      delay: 10
-      register: wait_result_fedora
-      until: wait_result_fedora is succeeded
     - name: Create temp directory
       win_file:
         path: C:\Temp
