--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
 - build_and_test
 - pre_release
 - acceptance
+- acceptance_cleanup
 - release
 
 variables: &globalvariables
@@ -640,12 +641,15 @@ pre_release_cluster_agent_image:
 .molecule_base: &molecule_base
   stage: acceptance
   dependencies: []
+  variables:
+    MOLECULE_EPHEMERAL_DIRECTORY: $CI_PROJECT_DIR/tmp_molecule_inventory
   before_script:
     - export AWS_ACCESS_KEY_ID=${MOLECULE_AWS_ACCESS_KEY_ID}
     - export AWS_SECRET_ACCESS_KEY=${MOLECULE_AWS_SECRET_ACCESS_KEY}
     - export MOLECULE_RUN_ID=${CI_JOB_ID}
     - export LC_CTYPE=en_US.UTF-8
     - export LANG=en_US.UTF-8
+    - mkdir -p $CI_PROJECT_DIR/tmp_molecule_inventory
 
 molecule_tests_vms:
   <<: *molecule_base
@@ -660,7 +664,18 @@ molecule_tests_vms:
     paths:
       - $CI_PROJECT_DIR/test/molecule-role/molecule/vms/topic-*.json
       - $CI_PROJECT_DIR/test/molecule-role/molecule/vms/*.log
+      - $CI_PROJECT_DIR/tmp_molecule_inventory
     expire_in: 1 week
+
+molecule_tests_vms_cleanup:
+   <<: *molecule_base
+   stage: acceptance_cleanup
+   script:
+     - cd $CI_PROJECT_DIR/test && ./molecule3.sh destroy -s vms
+   needs:
+     - molecule_tests_vms
+   when: on_failure
+   allow_failure: true
 
 molecule_tests_compose:
   <<: *molecule_base
