Removed include_vars

--- a/test/molecule-role/molecule/common/receiver/tasks/copy-configuration-files.yml
+++ b/test/molecule-role/molecule/common/receiver/tasks/copy-configuration-files.yml
@@ -1,6 +1,6 @@
 ---
 - name: Copy Configuration files
   copy:
-    src: "{{ configuration_files_src }}"
-    dest: "{{ configuration_files_dest }}"
+    src: "files/"
+    dest: "/home/ubuntu"
     mode: preserve
