--- a/test/molecule-role/molecule/vms/create.yml
+++ b/test/molecule-role/molecule/vms/create.yml
@@ -13,7 +13,19 @@
         winrm_rdp_port: 3389
         security_group_name: molecule_vms
         security_group_description: Agent v2 Molecule testing running on EC2 VMs
-        security_group_rules_extend:
+        security_group_rules:
+          - proto: tcp
+            from_port: "{{ ssh_port }}"
+            to_port: "{{ ssh_port }}"
+            cidr_ip: '0.0.0.0/0'
+          - proto: tcp
+            from_port: 7070  # StackState Topic API port
+            to_port: 7070
+            cidr_ip: '0.0.0.0/0'
+          - proto: icmp
+            from_port: 8
+            to_port: -1
+            cidr_ip: '0.0.0.0/0'
           - proto: tcp
             from_port: "{{ winrm_http_port }}"
             to_port: "{{ winrm_http_port }}"
@@ -54,5 +66,3 @@
             from_port: "{{ dnat_service_port }}"
             to_port: "{{ dnat_service_port }}"
             cidr_ip: '0.0.0.0/0'
-      set_fact:
-        security_group_rules: "{{ security_group_rules + security_group_rules_extend }}"
