include_vars replace with vars_files

--- a/test/molecule-role/molecule/compose/create.yml
+++ b/test/molecule-role/molecule/compose/create.yml
@@ -3,7 +3,8 @@
   hosts: localhost
   connection: local
   gather_facts: false
-  include_vars: ../common/create/vars/main.yml
+  vars_files:
+    - ../common/create/vars/main.yml
   security_group_name: molecule_compose
   tasks:
     - include_tasks: ../common/create/tasks/main.yml
