Docker indent fix

--- a/test/molecule-role/molecule/compose/playbook.destroy.yml
+++ b/test/molecule-role/molecule/compose/playbook.destroy.yml
@@ -4,4 +4,4 @@
   connection: local
   gather_facts: false
   tasks:
-    - include_tasks: ../common/destroy/tasks/main.yml
+    - include_tasks: ../common/destroy/tasks.yml
