--- a/test/molecule-role/molecule/compose/playbook.create.yml
+++ b/test/molecule-role/molecule/compose/playbook.create.yml
@@ -4,7 +4,7 @@
   connection: local
   gather_facts: false
   vars_files:
-    - ../common/create/vars/main.yml
+    - ../common/create/vars.yml
   security_group_name: molecule_compose
   tasks:
-    - include_tasks: ../common/create/tasks/main.yml
+    - include_tasks: ../common/create/tasks.yml
