--- a/test/molecule-role/molecule/compose/playbook.create.yml
+++ b/test/molecule-role/molecule/compose/playbook.create.yml
@@ -5,6 +5,7 @@
   gather_facts: false
   vars_files:
     - ../common/create/vars.yml
-  security_group_name: molecule_compose
+  vars:
+    security_group_name: molecule_compose
   tasks:
     - include_tasks: ../common/create/tasks.yml
