--- a/test/molecule-role/molecule/common/receiver/tasks/copy-docker-compose.yml
+++ b/test/molecule-role/molecule/common/receiver/tasks/copy-docker-compose.yml
@@ -4,3 +4,8 @@
     src: files/docker-compose.yml
     dest: /home/ubuntu/
     mode: preserve
+- name: Copy docker compose base file
+  copy:
+    src: ../common/docker/docker-compose.base.yml
+    dest: /home/ubuntu/
+    mode: preserve
