--- a/test/molecule-role/molecule/common/receiver/tasks/copy-configuration-files.yml
+++ b/test/molecule-role/molecule/common/receiver/tasks/copy-configuration-files.yml
@@ -1,6 +1,6 @@
 ---
 - name: Copy Configuration files
   copy:
-    src: "files/"
-    dest: "/home/ubuntu"
+    src: files/
+    dest: /home/ubuntu
     mode: preserve
