Testing depends_on within the main file

--- a/test/molecule-role/molecule/compose/files/docker-compose.yml
+++ b/test/molecule-role/molecule/compose/files/docker-compose.yml
@@ -8,21 +8,33 @@ services:
       service: zookeeper
 
   kafka:
+    depends_on:
+      zookeeper:
+        condition: service_healthy
     extends:
       file: docker-compose.base.yml
       service: kafka
 
   receiver:
+    depends_on:
+      kafka:
+        condition: service_healthy
     extends:
       file: docker-compose.base.yml
       service: receiver
 
   correlate:
+    depends_on:
+      kafka:
+        condition: service_healthy
     extends:
       file: docker-compose.base.yml
       service: correlate
 
   topic-api:
+    depends_on:
+      kafka:
+        condition: service_healthy
     extends:
       file: docker-compose.base.yml
       service: topic-api
@@ -33,16 +45,29 @@ services:
       service: db
 
   stackstate-books-app:
+    depends_on:
+      db:
+        condition: service_healthy
+      stackstate-agent:
+        condition: service_started
     extends:
       file: docker-compose.base.yml
       service: stackstate-books-app
 
   stackstate-authors-app:
+    depends_on:
+      db:
+        condition: service_healthy
+      stackstate-agent:
+        condition: service_started
     extends:
       file: docker-compose.base.yml
       service: stackstate-authors-app
 
   traefik:
+    depends_on:
+      - stackstate-books-app
+      - stackstate-authors-app
     extends:
       file: docker-compose.base.yml
       service: traefik
