--- a/test/molecule-role/molecule/integrations/playbook.prepare.yml
+++ b/test/molecule-role/molecule/integrations/playbook.prepare.yml
@@ -7,6 +7,7 @@
     - include_tasks: ../common/receiver/tasks/provisioning-dependencies.yml
     - include_tasks: ../common/receiver/tasks/docker-login.yml
     - include_tasks: ../common/receiver/tasks/copy-configuration-files.yml
+    - include_tasks: ../common/receiver/tasks/copy-docker-compose-base.yml
     - include_tasks: ../common/receiver/tasks/copy-verify-and-create-script-file.yml
     - include_tasks: ../common/receiver/tasks/copy-nagios-files.yml
     - include_tasks: ../common/receiver/tasks/copy-agent-integration-config-files.yml
