--- a/test/molecule-role/molecule/swarm/playbook.prepare.yml
+++ b/test/molecule-role/molecule/swarm/playbook.prepare.yml
@@ -69,6 +69,7 @@
         password: "{{ quay_password }}"
         reauthorize: yes
 
+    - include_tasks: ../common/receiver/tasks/copy-docker-compose-base.yml
     - name: Copy docker compose file
       copy:
         src: files/docker-compose.yml
