--- a/test/molecule-role/molecule/common/docker/docker-compose.base.yml
+++ b/test/molecule-role/molecule/common/docker/docker-compose.base.yml
@@ -21,7 +21,6 @@ services:
       KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ADVERTISED_PORT: 9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "sts_connection_beat_events:1:1,sts_correlate_endpoints:1:1,sts_generic_events:1:1,sts_intake_health:1:1,sts_multi_metrics:1:1,sts_state_events:1:1,sts_topo_agent_integrations:1:1,sts_topology_events:1:1,sts_topo_process_agents:1:1,sts_trace_events:1:1"
     volumes:
       - "./verify-or-create-topics.sh:/usr/local/bin/verify-or-create-topics.sh"
     healthcheck:
@@ -76,6 +75,28 @@ services:
     labels:
       - "traefik.frontend.rule=Host:stackstate-demo-db"
       - "traefik.backend=stackstate-demo-db"
+
+  mysql:
+    image: mysql:5.7
+    volumes:
+      - ./mysql:/docker-entrypoint-initdb.d
+    restart: always
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: 1
+
+  nagios:
+    build: nagios
+    ports:
+      - 8080:80
+    volumes:
+      - nagios_logs:/opt/nagios/var/log
+      - nagios_conf:/opt/nagios/etc
+
+  nginx:
+    image: nginx:1.14.2
+    container_name: nginx-1
 
   stackstate-books-app:
     image: "quay.io/stackstate/trace-java-demo:books-app-master"
