--- a/test/molecule-role/molecule/integrations/molecule.yml
+++ b/test/molecule-role/molecule/integrations/molecule.yml
@@ -1,11 +1,14 @@
 ---
 dependency:
   name: galaxy
+
 driver:
   name: ec2
+
 lint: |
   set -e
   yamllint -c .yamllint .
+
 platforms:
   - name: agent-integrations
     image: ami-09ae46ee3ab46c423    # Our Packer image based on Ubuntu 18.04 (EBS-Backed x86_64)
@@ -15,19 +18,22 @@ platforms:
     groups:
       - integrations_linux_vm
     ssh_user: ubuntu
+
 provisioner:
   name: ansible
   playbooks:
-    create: create.yml
-    destroy: destroy.yml
-    prepare: prepare.yml
+    create: playbook.create.yml
+    destroy: playbook.destroy.yml
+    prepare: playbook.prepare.yml
   lint:
     name: ansible-lint
   inventory:
     links:
       group_vars: group_vars/
+
 scenario:
   name: integrations
+
 verifier:
   name: testinfra
   lint:
