--- a/test/molecule-role/molecule/kubernetes/molecule.yml
+++ b/test/molecule-role/molecule/kubernetes/molecule.yml
@@ -1,11 +1,14 @@
 ---
 dependency:
   name: galaxy
+
 driver:
   name: ec2
+
 lint: |
        set -e
        yamllint -c .yamllint .
+
 platforms:
   - name: kubernetes-cluster-agent
     image: ami-09ae46ee3ab46c423    # Our Packer image based on Ubuntu 18.04 (EBS-Backed x86_64)
@@ -15,20 +18,23 @@ platforms:
     groups:
       - kubernetes_linux_vm
     ssh_user: ubuntu
+
 provisioner:
   name: ansible
   playbooks:
-    create: create.yml
-    prepare: prepare.yml
-    cleanup: cleanup.yml
-    destroy: destroy.yml
+    create: playbook.create.yml
+    prepare: playbook.prepare.yml
+    cleanup: playbook.cleanup.yml
+    destroy: playbook.destroy.yml
   lint:
     name: ansible-lint
   inventory:
     links:
       group_vars: group_vars/
+
 scenario:
   name: kubernetes
+
 verifier:
   name: testinfra
   lint:
