--- a/test/molecule-role/molecule/vms/playbook.destroy.yml
+++ b/test/molecule-role/molecule/vms/playbook.destroy.yml
@@ -4,5 +4,4 @@
   connection: local
   gather_facts: false
   tasks:
-    - include_role:
-        name: ../common/destroy
+    - include_tasks: ../common/destroy/tasks.yml
